Fix overflow issue

--- a/scss/hibben.scss
+++ b/scss/hibben.scss
@@ -305,7 +305,6 @@ body {
 
 .features__container--01 {
     position: relative;
-    overflow-y: hidden;
     .features__content_wrapper--01 {
 
         @media screen and (max-width: 768px) {
